# icon-kitchen-gitlab-sync

./: .gitignore  Makefile  README.md  input.template.json  pyproject.toml
icon_kitchen_gitlab_sync/: __init__.py  cli.py  codec.py  downloader.py  gitlab_uploader.py
